# agy

./: .gitignore  .markdownlint.json  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  flake.nix
benchmarks/: provider-results.example.json
docs/: provider-scorecard.md
docs/design/: 000-curriculum-roadmap.md  001-minimal-agent-loop.md  002-llm-adapter-layer.md  003-memory-model.md  004-action-model.md  005-tool-interface-and-registry.md  006-planner-architecture.md  README.md
src/: lib.rs  main.rs  scorecard.rs
src/action/: mod.rs
src/memory/: mod.rs
src/model/: mod.rs
src/planner/: mod.rs
src/tools/: mod.rs
